--- a/assets/sass/now-ui-kit.scss
+++ b/assets/sass/now-ui-kit.scss
@@ -1,3 +1,6 @@
+---
+# Front matter comment to ensure Jekyll properly reads file.
+---
 /*!
 
  =========================================================
