--- a/assets/demo/demo.css
+++ b/assets/demo/demo.css
@@ -1,16 +1,17 @@
-.tim-row{
-    margin-bottom: 20px;
+.tim-row {
+  margin-bottom: 20px;
 }
 
 .tim-white-buttons {
-    background-color: #777777;
+  background-color: #777777;
 }
-.typography-line{
-    padding-left: 25%;
-    margin-bottom: 35px;
-    position: relative;
-    display: block;
-    width: 100%;
+
+.typography-line {
+  padding-left: 25%;
+  margin-bottom: 35px;
+  position: relative;
+  display: block;
+  width: 100%;
 }
 
 .pick-class-label {
@@ -33,203 +34,220 @@
   display: flex;
   align-items: center;
 }
-.typography-line span{
-    bottom: 10px;
-    color: #c0c1c2;
-    display: block;
-    font-weight: 400;
-    font-size: 13px;
-    line-height: 13px;
-    left: 0;
-    margin-left: 20px;
-    position: absolute;
-    width: 260px;
-    text-transform: none;
-}
-.tim-row{
-    padding-top: 60px;
-}
-.tim-row h3{
-    margin-top: 0;
-}
-.switch{
-    margin-right: 20px;
-}
-#navbar-full .navbar{
-    border-radius: 0 !important;
-    margin-bottom: 15px;
-    z-index: 2;
+
+.typography-line span {
+  bottom: 10px;
+  color: #c0c1c2;
+  display: block;
+  font-weight: 400;
+  font-size: 13px;
+  line-height: 13px;
+  left: 0;
+  margin-left: 20px;
+  position: absolute;
+  width: 260px;
+  text-transform: none;
 }
 
-#menu-dropdown .navbar{
-    border-radius: 3px;
+.tim-row {
+  padding-top: 60px;
 }
 
-#pagination-row .pagination-container{
-    height: 100%;
-    max-height: 100%;
-    display: flex;
-    align-items: center;
+.tim-row h3 {
+  margin-top: 0;
 }
 
-#icons-row i.now-ui-icons{
-    font-size: 30px;
+.switch {
+  margin-right: 20px;
 }
 
-.space{
-    height: 130px;
-    display: block;
-}
-.space-110{
-    height: 110px;
-    display: block;
-}
-.space-50{
-    height: 50px;
-    display: block;
-}
-.space-70{
-    height: 70px;
-    display: block;
-}
-.navigation-example .img-src{
-    background-attachment: scroll;
+#navbar-full .navbar {
+  border-radius: 0 !important;
+  margin-bottom: 15px;
+  z-index: 2;
 }
 
-.navigation-example{
-    background-position: center center;
-    background-size: cover;
-    margin-top:0;
-    min-height: 740px;
-    height: 100%;
+#menu-dropdown .navbar {
+  border-radius: 3px;
 }
-#notifications{
-    background-color: #FFFFFF;
-    display: block;
-    width: 100%;
-    position: relative;
+
+#pagination-row .pagination-container {
+  height: 100%;
+  max-height: 100%;
+  display: flex;
+  align-items: center;
 }
-.tim-note{
-    text-transform: capitalize;
+
+#icons-row i.now-ui-icons {
+  font-size: 30px;
+}
+
+.space {
+  height: 130px;
+  display: block;
+}
+
+.space-110 {
+  height: 110px;
+  display: block;
+}
+
+.space-50 {
+  height: 50px;
+  display: block;
+}
+
+.space-70 {
+  height: 70px;
+  display: block;
+}
+
+.navigation-example .img-src {
+  background-attachment: scroll;
+}
+
+.navigation-example {
+  background-position: center center;
+  background-size: cover;
+  margin-top: 0;
+  min-height: 740px;
+  height: 100%;
+}
+
+#notifications {
+  background-color: #FFFFFF;
+  display: block;
+  width: 100%;
+  position: relative;
+}
+
+.tim-note {
+  text-transform: capitalize;
 }
 
 #buttons .btn,
-#javascriptComponents .btn{
-    margin: 0 0px 10px;
-}
-.space-100{
-    height: 100px;
-    display: block;
-    width: 100%;
+#javascriptComponents .btn {
+  margin: 0 0px 10px;
 }
 
-.be-social{
-    padding-bottom: 20px;
-/*     border-bottom: 1px solid #aaa; */
-    margin: 0 auto 40px;
-}
-.txt-white{
-    color: #FFFFFF;
-}
-.txt-gray{
-    color: #ddd !important;
+.space-100 {
+  height: 100px;
+  display: block;
+  width: 100%;
 }
 
+.be-social {
+  padding-bottom: 20px;
+  /*     border-bottom: 1px solid #aaa; */
+  margin: 0 auto 40px;
+}
 
-.parallax{
-  width:100%;
-  height:570px;
+.txt-white {
+  color: #FFFFFF;
+}
 
+.txt-gray {
+  color: #ddd !important;
+}
+
+.parallax {
+  width: 100%;
+  height: 570px;
   display: block;
   background-attachment: fixed;
-    background-repeat:no-repeat;
-    background-size:cover;
-    background-position: center center;
-
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center center;
 }
 
-.logo-container .logo{
+.logo-container .logo {
+  overflow: hidden;
+  border-radius: 50%;
+  border: 1px solid #333333;
+  width: 50px;
+  float: left;
+}
+
+.logo-container .brand {
+  font-size: 16px;
+  color: #FFFFFF;
+  line-height: 18px;
+  float: left;
+  margin-left: 10px;
+  margin-top: 7px;
+  width: 70px;
+  height: 40px;
+  text-align: left;
+}
+
+.logo-container .brand-material {
+  font-size: 18px;
+  margin-top: 15px;
+  height: 25px;
+  width: auto;
+}
+
+.logo-container .logo img {
+  width: 100%;
+}
+
+.navbar-small .logo-container .brand {
+  color: #333333;
+}
+
+.fixed-section {
+  top: 90px;
+  max-height: 80vh;
+  overflow: scroll;
+  position: sticky;
+}
+
+.fixed-section ul {
+  padding: 0;
+}
+
+.fixed-section ul li {
+  list-style: none;
+}
+
+.fixed-section li a {
+  font-size: 14px;
+  padding: 2px;
+  display: block;
+  color: #666666;
+}
+
+.fixed-section li a.active {
+  color: #00bbff;
+}
+
+.fixed-section.float {
+  position: fixed;
+  top: 100px;
+  width: 200px;
+  margin-top: 0;
+}
+
+.parallax .parallax-image {
+  width: 100%;
+  overflow: hidden;
+  position: absolute;
+}
+
+.parallax .parallax-image img {
+  width: 100%;
+}
+
+@media (max-width: 768px) {
+  .parallax .parallax-image {
+    width: 100%;
+    height: 640px;
     overflow: hidden;
-    border-radius: 50%;
-    border: 1px solid #333333;
-    width: 50px;
-    float: left;
-}
-
-.logo-container .brand{
-    font-size: 16px;
-    color: #FFFFFF;
-    line-height: 18px;
-    float: left;
-    margin-left: 10px;
-    margin-top: 7px;
-    width: 70px;
-    height: 40px;
-    text-align: left;
-}
-.logo-container .brand-material{
-    font-size: 18px;
-    margin-top: 15px;
-    height: 25px;
+  }
+  .parallax .parallax-image img {
+    height: 100%;
     width: auto;
-}
-.logo-container .logo img{
-    width: 100%;
-}
-.navbar-small .logo-container .brand{
-    color: #333333;
-}
-
-.fixed-section{
-    top: 90px;
-    max-height: 80vh;
-    overflow: scroll;
-    position: sticky;
-}
-
-.fixed-section ul{
-    padding: 0;
-}
-
-.fixed-section ul li{
-    list-style: none;
-}
-.fixed-section li a{
-    font-size: 14px;
-    padding: 2px;
-    display: block;
-    color: #666666;
-}
-.fixed-section li a.active{
-    color: #00bbff;
-}
-.fixed-section.float{
-    position: fixed;
-    top: 100px;
-    width: 200px;
-    margin-top: 0;
-}
-
-
-.parallax .parallax-image{
-    width: 100%;
-    overflow: hidden;
-    position: absolute;
-}
-.parallax .parallax-image img{
-    width: 100%;
-}
-
-@media (max-width: 768px){
-    .parallax .parallax-image{
-         width: 100%;
-         height: 640px;
-         overflow: hidden;
-     }
-    .parallax .parallax-image img{
-       height: 100%;
-       width: auto;
-   }
+  }
 }
 
 /*.separator{
@@ -248,75 +266,90 @@
 .separator.separator-gray{
     background-color: #EEEEEE;
 }*/
-.social-buttons-demo .btn{
-    margin-right: 5px;
-    margin-bottom: 7px;
+
+.social-buttons-demo .btn {
+  margin-right: 5px;
+  margin-bottom: 7px;
 }
 
-.img-container{
-    width: 100%;
-    overflow: hidden;
-}
-.img-container img{
-    width: 100%;
+.img-container {
+  width: 100%;
+  overflow: hidden;
 }
 
-.lightbox img{
-    width: 100%;
+.img-container img {
+  width: 100%;
 }
-.lightbox .modal-content{
-    overflow: hidden;
+
+.lightbox img {
+  width: 100%;
 }
-.lightbox .modal-body{
-    padding: 0;
+
+.lightbox .modal-content {
+  overflow: hidden;
 }
-@media screen and (min-width: 991px){
-    .lightbox .modal-dialog{
-        width: 960px;
-    }
+
+.lightbox .modal-body {
+  padding: 0;
 }
-@media (max-width: 991px){
-    .fixed-section.affix{
-        position: relative;
-        margin-bottom: 100px;
-    }
+
+@media screen and (min-width: 991px) {
+  .lightbox .modal-dialog {
+    width: 960px;
+  }
 }
-@media (max-width: 768px){
-    .btn, .btn-morphing{
-        margin-bottom: 10px;
-    }
-    .parallax .motto{
-        top: 170px;
-        margin-top: 0;
-        font-size: 60px;
-        width: 270px;
-    }
+
+@media (max-width: 991px) {
+  .fixed-section.affix {
+    position: relative;
+    margin-bottom: 100px;
+  }
+}
+
+@media (max-width: 768px) {
+  .btn,
+  .btn-morphing {
+    margin-bottom: 10px;
+  }
+  .parallax .motto {
+    top: 170px;
+    margin-top: 0;
+    font-size: 60px;
+    width: 270px;
+  }
 }
 
 /*       Loading dots  */
 
 /*      transitions */
-.presentation .front, .presentation .front:after, .presentation .front .btn, .logo-container .logo, .logo-container .brand{
-     -webkit-transition: all .2s;
-    -moz-transition: all .2s;
-    -o-transition: all .2s;
-    transition: all .2s;
+
+.presentation .front,
+.presentation .front:after,
+.presentation .front .btn,
+.logo-container .logo,
+.logo-container .brand {
+  -webkit-transition: all .2s;
+  -moz-transition: all .2s;
+  -o-transition: all .2s;
+  transition: all .2s;
 }
 
+#images h4 {
+  margin-bottom: 30px;
+}
 
-#images h4{
-    margin-bottom: 30px;
+#javascriptComponents {
+  padding-bottom: 0;
 }
-#javascriptComponents{
-    padding-bottom: 0;
-}
+
 /*      layer animation          */
 
-.layers-container{
-    display: block;
-    margin-top: 50px;
-    position: relative;
+.layers-container {
+  display: block;
+  margin-top: 50px;
+  position: relative;
 }
+
 .layers-container img {
   position: absolute;
   width: 100%;
@@ -332,121 +365,142 @@
   -webkit-transition: 1.5s ease-in-out;
 }
 
-.navbar-default.navbar-small .logo-container .brand{
-    color: #333333;
-}
-.navbar-transparent.navbar-small .logo-container .brand{
-    color: #FFFFFF;
-}
-.navbar-default.navbar-small .logo-container .brand{
-    color: #333333;
+.navbar-default.navbar-small .logo-container .brand {
+  color: #333333;
 }
 
-.sharing-area{
-    margin-top: 80px;
+.navbar-transparent.navbar-small .logo-container .brand {
+  color: #FFFFFF;
 }
-.sharing-area .btn{
-    margin: 15px 4px 0;
+
+.navbar-default.navbar-small .logo-container .brand {
+  color: #333333;
+}
+
+.sharing-area {
+  margin-top: 80px;
+}
+
+.sharing-area .btn {
+  margin: 15px 4px 0;
 }
 
 .section-thin,
-.section-notifications{
-    padding: 0;
+.section-notifications {
+  padding: 0;
 }
-.section-navbars{
-    padding-top: 0;
+
+.section-navbars {
+  padding-top: 0;
 }
-#navbar .navbar{
-    margin-bottom: 20px;
+
+#navbar .navbar {
+  margin-bottom: 20px;
 }
 
 #navbar .navbar-toggler,
-#menu-dropdown .navbar-toggler{
-    pointer-events: none;
+#menu-dropdown .navbar-toggler {
+  pointer-events: none;
 }
-.section-tabs{
-    background: #EEEEEE;
+
+.section-tabs {
+  background: #EEEEEE;
 }
-.section-pagination{
-    padding-bottom: 0;
+
+.section-pagination {
+  padding-bottom: 0;
 }
-.section-download{
-    padding-top: 130px;
+
+.section-download {
+  padding-top: 130px;
 }
-.section-download .description{
-    margin-bottom: 60px;
+
+.section-download .description {
+  margin-bottom: 60px;
 }
-.section-download h4{
-    margin-bottom: 25px;
+
+.section-download h4 {
+  margin-bottom: 25px;
 }
-.section-examples a{
-    text-decoration: none;
+
+.section-examples a {
+  text-decoration: none;
 }
-.section-examples a + a{
-    margin-top: 30px;
+
+.section-examples a+a {
+  margin-top: 30px;
 }
-.section-examples h5{
-    margin-top: 30px;
+
+.section-examples h5 {
+  margin-top: 30px;
 }
-.components-page .wrapper > .header,
-.tutorial-page .wrapper > .header{
-    height: 500px;
-    padding-top: 128px;
-    background-size: cover;
-    background-position: center center;
+
+.components-page .wrapper>.header,
+.tutorial-page .wrapper>.header {
+  height: 500px;
+  padding-top: 128px;
+  background-size: cover;
+  background-position: center center;
 }
+
 .components-page .title,
-.tutorial-page .title{
-    color: #FFFFFF;
+.tutorial-page .title {
+  color: #FFFFFF;
 }
 
-.brand .h1-seo{
-    font-size: 2.8em;
-    text-transform: uppercase;
-    font-weight: 300;
-}
-.brand .n-logo{
-    max-width: 100px;
-    margin-bottom: 40px;
-}
-.invision-logo{
-    max-width: 70px;
-    top: -2px;
-    position: relative;
-}
-.creative-tim-logo{
-    max-width: 140px;
-    top: -2px;
-    position: relative;
-}
-.section-javascript .title{
-    margin-bottom: 0;
+.brand .h1-seo {
+  font-size: 2.8em;
+  text-transform: uppercase;
+  font-weight: 300;
 }
 
-.navbar .switch-background{
-    display: block;
-}
-.navbar-transparent .switch-background{
-    display: none;
+.brand .n-logo {
+  max-width: 100px;
+  margin-bottom: 40px;
 }
 
-.section-signup .col .btn{
-    margin-top: 30px;
+.invision-logo {
+  max-width: 70px;
+  top: -2px;
+  position: relative;
 }
 
-#buttons-row .btn{
-    margin-bottom: 10px;
+.creative-tim-logo {
+  max-width: 140px;
+  top: -2px;
+  position: relative;
 }
 
-.section-basic{
-    padding-top: 0;
+.section-javascript .title {
+  margin-bottom: 0;
 }
-.section-images{
-    padding-bottom: 0;
+
+.navbar .switch-background {
+  display: block;
+}
+
+.navbar-transparent .switch-background {
+  display: none;
+}
+
+.section-signup .col .btn {
+  margin-top: 30px;
+}
+
+#buttons-row .btn {
+  margin-bottom: 10px;
+}
+
+.section-basic {
+  padding-top: 0;
+}
+
+.section-images {
+  padding-bottom: 0;
 }
 
 @media screen and (max-width: 991px) {
-    .section-navbars .navbar-collapse{
-        display: none !important;
-    }
+  .section-navbars .navbar-collapse {
+    display: none !important;
+  }
 }
