Made checkbox sign work with non-adjacent .form-check-sign

--- a/assets/scss/now-ui-kit/_checkboxes-radio.scss
+++ b/assets/scss/now-ui-kit/_checkboxes-radio.scss
@@ -65,7 +65,7 @@
   position: absolute;
   visibility: hidden;
 }
-.form-check input[type="checkbox"]:checked + .form-check-sign::after{
+.form-check input[type="checkbox"]:checked ~ .form-check-sign::after{
   opacity: 1;
 }
 
