--- a/assets/scss/now-ui-kit/_nucleo-outline.scss
+++ b/assets/scss/now-ui-kit/_nucleo-outline.scss
@@ -8,11 +8,11 @@ Created using IcoMoon - icomoon.io
 
 @font-face {
   font-family: 'Nucleo Outline';
-  src: url('../fonts/nucleo-outline.eot');
-  src: url('../fonts/nucleo-outline.eot') format('embedded-opentype'),
-  url('../fonts/nucleo-outline.woff2') format('woff2'),
-  url('../fonts/nucleo-outline.woff') format('woff'),
-  url('../fonts/nucleo-outline.ttf') format('truetype');
+  src: url('#{$nc-font-path}/nucleo-outline.eot');
+  src: url('#{$nc-font-path}/nucleo-outline.eot') format('embedded-opentype'),
+  url('#{$nc-font-path}/nucleo-outline.woff2') format('woff2'),
+  url('#{$nc-font-path}/nucleo-outline.woff') format('woff'),
+  url('#{$nc-font-path}/nucleo-outline.ttf') format('truetype');
   font-weight: normal;
   font-style: normal;
 }
@@ -23,7 +23,7 @@ Created using IcoMoon - icomoon.io
 
 .now-ui-icons {
   display: inline-block;
-  font: normal normal normal 14px/1 'Nucleo Outline';
+  font: normal normal normal #{$nc-font-size-base}/1 'Nucleo Outline';
   font-size: inherit;
   speak: none;
   text-transform: none;
@@ -43,7 +43,7 @@ Created using IcoMoon - icomoon.io
 .now-ui-icons.circle {
   padding: 0.33333333em;
   vertical-align: -16%;
-  background-color: #eee;
+  background-color: $nc-background-color;
 }
 
 .now-ui-icons.circle {
