--- a/assets/scss/now-ui-kit/plugins/_plugin-nouislider.scss
+++ b/assets/scss/now-ui-kit/plugins/_plugin-nouislider.scss
@@ -1,4 +1,4 @@
-/*! nouislider - 11.1.0 - 2018-04-02 11:18:13 */
+/*! nouislider - 13.1.4 */
 /* Functional styling;
  * These styles are required for noUiSlider to function.
  * You don't need to change these rules to apply your design.
@@ -78,21 +78,17 @@ html:not([dir="rtl"]) .noUi-horizontal .noUi-origin {
   height: 1px;
 }
 .noUi-horizontal .noUi-handle {
-  border-radius: 50%;
-    background-color: #FFFFFF;
-    box-shadow: 0 1px 13px 0 rgba(0, 0, 0, 0.2);
-    height: 15px;
-    width: 15px;
-    cursor: pointer;
-    outline: 0;
-
-    &:before,
-    &:after{
-      display: none;
-    }
+    border-radius: 50%;
+	background-color: $white-color;
+	box-shadow: 0 1px 13px 0 rgba(0, 0, 0, 0.2);
+	height:15px;
+	width:15px;
+	cursor:pointer;
+    margin-top: -7px;
+    outline: none;
 }
 .noUi-vertical {
-  width: 18px;
+	width: 18px;
 }
 .noUi-vertical .noUi-handle {
   width: 28px;
@@ -101,22 +97,24 @@ html:not([dir="rtl"]) .noUi-horizontal .noUi-origin {
   top: -17px;
 }
 html:not([dir="rtl"]) .noUi-horizontal .noUi-handle {
-  right: -10px;
-  top: -7px;
+  right: -15px;
   left: auto;
 }
 /* Styling;
  * Giving the connect element a border radius causes issues with using transform: scale
  */
-.noUi-target {
-  background-color: rgba(182, 182, 182, 0.3);
-  border-radius: 3px;
-}
+ .noUi-target {
+ 	background-color: rgba(182, 182, 182, .3);
+ 	border-radius: 3px;
+ }
 .noUi-connects {
   border-radius: 3px;
 }
 .noUi-connect {
-  background: #3FB8AF;
+	background: $default-color;
+    border-radius: 3px;
+-webkit-transition: background 450ms;
+	transition: background 450ms;
 }
 /* Handles and cursors;
  */
@@ -127,17 +125,21 @@ html:not([dir="rtl"]) .noUi-horizontal .noUi-handle {
   cursor: ns-resize;
 }
 .noUi-handle {
-  border-radius: 3px;
-  background: #FFF;
-  cursor: default;
-  -webkit-transition: $general-transition-time $transition-ease;
+	// border: 1px solid #D9D9D9;
+	border-radius: 3px;
+	background: #FFF;
+	cursor: default;
+	box-shadow: inset 0 0 1px #FFF,
+				inset 0 1px 7px #EBEBEB,
+				0 3px 6px -3px #BBB;
+	-webkit-transition: $general-transition-time $transition-ease;
     -moz-transition: $general-transition-time $transition-ease;
     -ms-transition: $general-transition-time $transition-ease;
     -o-transform: $general-transition-time $transition-ease;
     transition: $general-transition-time $transition-ease;
 }
 .noUi-active {
-  -webkit-transform: scale3d(1.5,1.5,1);
+	-webkit-transform: scale3d(1.5,1.5,1);
     -moz-transform: scale3d(1.5,1.5,1);
     -ms-transform: scale3d(1.5,1.5,1);
     -o-transform: scale3d(1.5,1.5,1);
@@ -147,14 +149,7 @@ html:not([dir="rtl"]) .noUi-horizontal .noUi-handle {
  */
 .noUi-handle:before,
 .noUi-handle:after {
-  content: "";
-  display: block;
-  position: absolute;
-  height: 14px;
-  width: 1px;
-  background: #E8E7E6;
-  left: 14px;
-  top: 6px;
+  display: none;
 }
 .noUi-handle:after {
   left: 17px;
@@ -299,14 +294,12 @@ html:not([dir="rtl"]) .noUi-horizontal .noUi-handle {
 }
 
 .slider {
-  & .noUi-connect{
-      background-color: $default-color;
-  }
 
 	&.slider-neutral{
-    & .noUi-connect{
-        background-color: $white-color;
-    }
+		& .noUi-connect,
+        &.noUi-connect{
+            background-color: $white-color;
+        }
 
 		&.noUi-target{
 			background-color: rgba(255,255,255, .3);
