--- a/assets/scss/now-ui-kit/mixins/_navbar.scss
+++ b/assets/scss/now-ui-kit/mixins/_navbar.scss
@@ -177,7 +177,7 @@
 @mixin navbar-collapse() {
     .navbar-collapse{
         position: fixed;
-        display: block;
+        display: block !important;
         top: 0;
         height: 100% !important;
         width: 300px;
